tests/Core/negative/parsing/test016.jvc
type Unit {
  unit : Unit;
};

case unit of {
  _ := 0;
}
